# sessionula

./: .envrc  README.md  cabal.project  default.nix  hie.yaml
backend/sessionula-file/: sessionula-file.cabal
backend/sessionula-file/src/Sessionula/Backend/: File.hs
backend/sessionula-file/test/Sessionula/Backend/: FileSpec.hs
backend/sessionula-hasql/: sessionula-hasql.cabal
backend/sessionula-hasql/data/: 20200412112651_setup.sql
backend/sessionula-hasql/src/Sessionula/Backend/: Hasql.hs
backend/sessionula-hasql/test/Sessionula/Backend/: HasqlSpec.hs
backend/sessionula-hedis/: sessionula-hedis.cabal
backend/sessionula-hedis/src/Sessionula/Backend/: Hedis.hs
backend/sessionula-hedis/test/Sessionula/Backend/: HedisSpec.hs
frontend/sessionula-servant/: sessionula-servant.cabal
frontend/sessionula-servant-server/: sessionula-servant-server.cabal
frontend/sessionula-servant-server/src/Sessionula/Frontend/Servant/: Server.hs
frontend/sessionula-servant-server/test/Sessionula/Frontend/Servant/: ServerSpec.hs
frontend/sessionula-servant/src/Sessionula/Frontend/: Servant.hs
frontend/sessionula-wai/: sessionula-wai.cabal
frontend/sessionula-wai/src/Sessionula/Frontend/: Wai.hs
frontend/sessionula-wai/test/Sessionula/Frontend/: WaiSpec.hs
sessionula/: sessionula.cabal
sessionula-extra/: sessionula-extra.cabal
sessionula-extra/src/Sessionula/: Extra.hs
sessionula/src/: Sessionula.hs
sessionula/src/Sessionula/Backend/: Map.hs  Spec.hs
sessionula/test/Sessionula/Backend/: MapSpec.hs
