cabal-version: 2.2
name: sessionula
version: 0.1.0
build-type: Simple
license: MIT
license-file: LICENSE

flag backend-spec
  description: Enable Backend Spec
  manual: True
  default: False
            
library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Sessionula
                 , Sessionula.Backend.Map
  build-depends: base
               , bytestring
               , cereal
               , containers
               , cryptonite
               , memory
               , safe-exceptions
               , stm
               , time

  if flag(backend-spec)
    exposed-modules: Sessionula.Backend.Spec
    build-depends: async
                 , hspec

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules: Sessionula.Backend.MapSpec
  build-depends: base
               , hspec
               , hspec-discover
               , sessionula
