cabal-version: 2.2
name: sessionula-file
version: 0.1.0
build-type: Simple
license: MIT
license-file: LICENSE

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Sessionula.Backend.File
  build-depends: base
               , bytestring
               , directory
               , filepath
               , safe-exceptions
               , sessionula

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules: Sessionula.Backend.FileSpec
  build-depends: base
               , directory
               , filepath
               , hspec
               , hspec-discover
               , sessionula
               , sessionula-file
