cabal-version: 2.2
name: sessionula-hasql
version: 0.1.0
build-type: Simple
license: MIT
license-file: LICENSE            
data-dir: data

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Sessionula.Backend.Hasql
  build-depends: base
               , hasql
               , hasql-th
               , sessionula
               , text

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules: Sessionula.Backend.HasqlSpec
  build-depends: base
               , bytestring
               , hspec
               , hspec-discover
               , sessionula
               , sessionula-hasql
               