cabal-version: 2.2
name: sessionula-wai
version: 0.1.0
build-type: Simple
license: MIT
license-file: LICENSE

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Sessionula.Frontend.Wai
  build-depends: base
               , bytestring
               , cookie
               , http-types
               , sessionula
               , vault
               , wai

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-language: Haskell2010
  other-modules: Sessionula.Frontend.WaiSpec
  build-depends: base
               , bytestring
               , case-insensitive
               , hspec
               , hspec-discover
               , http-client
               , http-types
               , lens
               , sessionula
               , sessionula-wai
               , wai
               , warp
               , wreq